Increase memory bounds